working on more type saftey